--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,123 +1,156 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
+import LinkButton from '../components/LinkButton.astro'
+import Layout from '../layouts/Layout.astro'
+import { event } from '../utils/contants'
+import { Image } from 'astro:assets'
+import imagenes from '../assets/imagenes.png'
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="MasterClass">
 	<main>
-		<svg
-			class="astro-a"
-			width="495"
-			height="623"
-			viewBox="0 0 495 623"
-			fill="none"
-			xmlns="http://www.w3.org/2000/svg"
-			aria-hidden="true"
-		>
-			<path
-				fill-rule="evenodd"
-				clip-rule="evenodd"
-				d="M167.19 364.254C83.4786 364.254 0 404.819 0 404.819C0 404.819 141.781 19.4876 142.087 18.7291C146.434 7.33701 153.027 0 162.289 0H332.441C341.703 0 348.574 7.33701 352.643 18.7291C352.92 19.5022 494.716 404.819 494.716 404.819C494.716 404.819 426.67 364.254 327.525 364.254L264.41 169.408C262.047 159.985 255.147 153.581 247.358 153.581C239.569 153.581 232.669 159.985 230.306 169.408L167.19 364.254ZM160.869 530.172C160.877 530.18 160.885 530.187 160.894 530.195L160.867 530.181C160.868 530.178 160.868 530.175 160.869 530.172ZM136.218 411.348C124.476 450.467 132.698 504.458 160.869 530.172C160.997 529.696 161.125 529.242 161.248 528.804C161.502 527.907 161.737 527.073 161.917 526.233C165.446 509.895 178.754 499.52 195.577 500.01C211.969 500.487 220.67 508.765 223.202 527.254C224.141 534.12 224.23 541.131 224.319 548.105C224.328 548.834 224.337 549.563 224.347 550.291C224.563 566.098 228.657 580.707 237.264 593.914C245.413 606.426 256.108 615.943 270.749 622.478C270.593 621.952 270.463 621.508 270.35 621.126C270.045 620.086 269.872 619.499 269.685 618.911C258.909 585.935 266.668 563.266 295.344 543.933C298.254 541.971 301.187 540.041 304.12 538.112C310.591 533.854 317.059 529.599 323.279 525.007C345.88 508.329 360.09 486.327 363.431 457.844C364.805 446.148 363.781 434.657 359.848 423.275C358.176 424.287 356.587 425.295 355.042 426.275C351.744 428.366 348.647 430.33 345.382 431.934C303.466 452.507 259.152 455.053 214.03 448.245C184.802 443.834 156.584 436.019 136.218 411.348Z"
-				fill="url(#paint0_linear_1805_24383)"></path>
-			<defs>
-				<linearGradient
-					id="paint0_linear_1805_24383"
-					x1="247.358"
-					y1="0"
-					x2="247.358"
-					y2="622.479"
-					gradientUnits="userSpaceOnUse"
-				>
-					<stop stop-opacity="0.9"></stop>
-					<stop offset="1" stop-opacity="0.2"></stop>
-				</linearGradient>
-			</defs>
-		</svg>
-		<h1>Welcome to <span class="text-gradient">Astro</span></h1>
-		<p class="instructions">
-			To get started, open the directory <code>src/pages</code> in your project.<br />
-			<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
-		</p>
-		<ul role="list" class="link-card-grid">
-			<Card
-				href="https://docs.astro.build/"
-				title="Documentation"
-				body="Learn how Astro works and explore the official API docs."
-			/>
-			<Card
-				href="https://astro.build/integrations/"
-				title="Integrations"
-				body="Supercharge your project with new frameworks and libraries."
-			/>
-			<Card
-				href="https://astro.build/themes/"
-				title="Themes"
-				body="Explore a galaxy of community-built starter themes."
-			/>
-			<Card
-				href="https://astro.build/chat/"
-				title="Community"
-				body="Come say hi to our amazing Discord community. ❤️"
-			/>
-		</ul>
+		<section class="container mx-auto pt-4">
+			<h1 class="pb-4 text-center text-xl font-bold md:text-3xl">
+				¿QUÉ PASARÍA SI TODO LO QUE NOS HAN DICHO SOBRE BAJAR DE PESO FUERA UNA GRAN MENTIRA?
+			</h1>
+			<div class="flex">
+				<div>
+					<img
+						src="berenice_portrait.png"
+						alt="berenice"
+						height="600"
+						width="300"
+						class="hidden md:flex"
+					/>
+				</div>
+				<div class="mx-4 flex w-full flex-col justify-around md:mx-0">
+					<h1 class="py-4 text-center text-xl text-pink-500 md:py-0 md:text-4xl">
+						¡Masterclass Gratuita!
+					</h1>
+					<h2 class="py-2 text-xl font-bold md:text-4xl">
+						CREA AMOR PROPIO Y AUTOESTIMA INQUEBRANTABLE
+					</h2>
+					<h2 class="text-xl md:text-2xl">Rompiendo Con Las 3 Mentiras Comunes Que Sabotean</h2>
+					<h1 class="text-xl font-semibold">Tus Intenciones De Bajar De Peso</h1>
+					<LinkButton />
+				</div>
+			</div>
+		</section>
+
+		<section class="bg-pink-400 p-4">
+			<divc class="mx-auto grid grid-cols-2 place-items-center items-center">
+				<div class="flex items-center gap-4">
+					<img
+						src="boleto.webp"
+						alt="boleto"
+						height="128"
+						width="128"
+						class="h-16 w-16 rounded-full"
+					/>
+					<div>
+						<p class="text text-white">Reserva tu lugar</p>
+						<p class="text-sm text-white">Octubre 2023</p>
+					</div>
+				</div>
+				<div class="flex items-center gap-4">
+					<img src="anfritrion_small.webp" alt="anfritrion" class="h-16 w-16 rounded-full" />
+					<div>
+						<p class="text-white">Psicóloga Berenice Bastidas</p>
+						<p class="text-xs text-white">Anfitrión del evento</p>
+					</div>
+				</div>
+			</divc>
+		</section>
+
+		<section class="container px-4 py-2">
+			<h1 class="my-2 text-center text-2xl font-semibold md:text-4xl">
+				Lo Que Aprenderás En Este Exclusivo Evento
+			</h1>
+			<div class="mx-4 grid py-4 md:grid-cols-3 md:gap-12">
+				{
+					event.map((item) => (
+						<div class="flex flex-col items-center gap-4 py-4 md:py-0">
+							<img
+								src={item.image}
+								alt={item.image}
+								height={item.heigth}
+								width={item.width}
+								class="md:h-56   "
+							/>
+							<hr class="w-200 my-6 w-3/4 border-t-2 border-pink-500" />
+							<div>
+								<p class="text-center text-lg text-pink-500">{item.description}</p>
+								<p class="mt-2 text-center">{item.description}</p>
+							</div>
+						</div>
+					))
+				}
+			</div>
+		</section>
+
+		<section>
+			<div class="bg-pink-400 p-8">
+				<h1 class="text-center text-4xl font-bold tracking-wider text-white">
+					¿POR QUÉ TE PUEDO AYUDAR?
+				</h1>
+			</div>
+			<div class="container mx-auto grid px-4 md:grid-cols-3 md:items-center md:px-0">
+				<div class="col-span-2 leading-6">
+					<h2 class="text-center text-3xl font-semibold">Psicóloga Berenice Bastidas</h2>
+					<hr class="md:w-200 my-2 w-full border-t-2 border-pink-500" />
+					<p>
+						Exitosa, te entiendo, estar en un lugar así no es raro, es bastante común. Se vuelve el
+						“normal” y decimos cosas como “me tengo que amar incondicionalmente” aún si tu cuerpo no
+						cumple tus estándares.
+					</p>
+					<p>
+						Conozco ese lugar íntimamente. Yo solía ser esa persona y sufría en silencio, deseaba en
+						silencio, trataba de aceptarme sin éxito en silencio.
+					</p>
+					<p>
+						Hasta que un día me harté de meditar todos los días 20 min, de ir con mi terapeuta y
+						contarle todos mis problemas y traumas, de buscar atajos para tener un cuerpazo, y más
+						que nada de verme haciendo muchas cosas con pocos resultados, ni al nivel que yo quería.
+					</p>
+					<p>
+						Descubrí las 3 mentiras que estaba creyendo, que me mantenían gorda, en una talla que no
+						me gustaba y en un constante estado de escasez mental.
+					</p>
+					<p>
+						Hoy quiero compartirlo contigo, si ya intentaste dietas, ejercicios, cirugías
+						bariátricas, cirugías plásticas y sientes que nada te funciona puedo ayudarte a que
+						vivas esta transformación. ¡Es completamente posible para ti!
+					</p>
+					<p>
+						Lo sé con convicción esta es mi foto soy yo, y si lo he hecho posible para mí, créeme
+						puedo hacerlo posible para ti también.
+					</p>
+				</div>
+				<div class="flex md:justify-end">
+					<Image src={imagenes} alt="imagees" height="300" width="400" loading="lazy" />
+				</div>
+			</div>
+		</section>
+		<section>
+			<div class="bg-pink-400 p-8">
+				<h2 class="text-center text-2xl tracking-wider text-white md:text-4xl">
+					¿Hiciste dietas, ejercicios, cirugías bariátricas, cirugías plásticas y volviste a subir?
+				</h2>
+				<h1 class="text-center text-2xl font-bold tracking-wider text-white md:text-4xl">
+					LO QUE SUBISTE DE PESO EN EL PASADO, SE BAJA HOY EN EL PRESENTE...
+				</h1>
+				<p class="mt-6 text-center text-white">¡Esta masterclass Gratuito Si Es Para Ti!</p>
+			</div>
+			<div class="container mt-16 px-4 md:mx-20 md:px-0">
+				<h1 class="text-center text-2xl font-semibold md:text-4xl">
+					Rompiendo Con Las 3 Mentiras Comunes
+				</h1>
+				<h1 class="text-center text-2xl font-semibold md:text-4xl">
+					Que Sabotean Tus Intenciones De Bajar De Peso
+				</h1>
+			</div>
+			<LinkButton />
+			<p class="text-center text-xl">Voy a compartir contigo todas las herramientas que utilicé</p>
+			<p class="text-center text-xl">para llevar mi vida a otro nivel de éxito rápidamente.</p>
+		</section>
 	</main>
 </Layout>
-
-<style>
-	main {
-		margin: auto;
-		padding: 1rem;
-		width: 800px;
-		max-width: calc(100% - 2rem);
-		color: white;
-		font-size: 20px;
-		line-height: 1.6;
-	}
-	.astro-a {
-		position: absolute;
-		top: -32px;
-		left: 50%;
-		transform: translatex(-50%);
-		width: 220px;
-		height: auto;
-		z-index: -1;
-	}
-	h1 {
-		font-size: 4rem;
-		font-weight: 700;
-		line-height: 1;
-		text-align: center;
-		margin-bottom: 1em;
-	}
-	.text-gradient {
-		background-image: var(--accent-gradient);
-		-webkit-background-clip: text;
-		-webkit-text-fill-color: transparent;
-		background-size: 400%;
-		background-position: 0%;
-	}
-	.instructions {
-		margin-bottom: 2rem;
-		border: 1px solid rgba(var(--accent-light), 25%);
-		background: linear-gradient(rgba(var(--accent-dark), 66%), rgba(var(--accent-dark), 33%));
-		padding: 1.5rem;
-		border-radius: 8px;
-	}
-	.instructions code {
-		font-size: 0.8em;
-		font-weight: bold;
-		background: rgba(var(--accent-light), 12%);
-		color: rgb(var(--accent-light));
-		border-radius: 4px;
-		padding: 0.3em 0.4em;
-	}
-	.instructions strong {
-		color: rgb(var(--accent-light));
-	}
-	.link-card-grid {
-		display: grid;
-		grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
-		gap: 2rem;
-		padding: 0;
-	}
-</style>
