feat: update to include initial web

--- a/src/pages/evento/formulario.astro
+++ b/src/pages/evento/formulario.astro
@@ -1,5 +1,5 @@
 ---
-import Layout from '../layouts/Layout.astro'
+import Layout from '../../layouts/Layout.astro'
 ---
 
 <Layout title="Registro al evento">
@@ -75,16 +75,16 @@ import Layout from '../layouts/Layout.astro'
 				/>
 
 				<input type="hidden" name="publicaccountid" value="9377d1ed-c310-4467-b52c-bee4e5379dcb" />
-				<input type="hidden" name="returnUrl" value="www.gestionatupsicologia.com/gracias" />
+				<input type="hidden" name="returnUrl" value="www.gestionatupsicologia.com/evento/gracias" />
 				<input
 					type="hidden"
 					name="activationReturnUrl"
-					value="www.gestionatupsicologia.com/gracias"
+					value="www.gestionatupsicologia.com/evento/gracias"
 				/>
 				<input
 					type="hidden"
 					name="alreadyactiveurl"
-					value="https://www.gestionatupsicologia.com/gracias"
+					value="https://www.gestionatupsicologia.com/evento/gracias"
 				/>
 				<input type="hidden" name="activationTemplate" value="" />
 				<input type="hidden" name="source" value="WebForm" />
