--- a/src/pages/mx/index.astro
+++ b/src/pages/mx/index.astro
@@ -1,5 +1,5 @@
 ---
-import Layout from '../layouts/Layout.astro'
+import Layout from '../../layouts/Layout.astro'
 
 const sesions = [
 	{
@@ -16,24 +16,26 @@ const sesions = [
 	}
 ]
 
-import berenice from '../assets/landing_berenice_left.png'
+import berenice from '../../assets/landing_berenice_left.png'
 import { Image } from 'astro:assets'
 ---
 
 <script>
 	document.getElementById('plan1')?.addEventListener('click', () => {
-		window.open('https://buy.stripe.com/9AQ5mxa0zcfBcWQ003', '_blank')
+		console.log('click')
+		window.open('https://buy.stripe.com/8wMeX7egP93p4qk00a', '_blank')
 	})
 
 	document.getElementById('plan2')?.addEventListener('click', () => {
-		window.open('https://buy.stripe.com/4gwbKVgoX0wTcWQeUY', '_blank')
+		console.log('click')
+		window.open('https://buy.stripe.com/8wMaGRa0z7ZlcWQeV5', '_blank')
 	})
 </script>
 
-<Layout title="Terapia Psicologica">
+<Layout title="Terapia Psícologica">
 	<main class="min-h-screen">
 		<div class="bg-[#deabed] p-4 px-4 md:px-24">
-			<div class="text-center uppercase text-[rgba(20,1,6,.94)]">
+			<div class="font-raleway text-center uppercase text-[rgba(20,1,6,.94)]">
 				<h1 class="text-4xl">Berenice Bastidas</h1>
 				<h1 class="text-4xl">Psícologa</h1>
 			</div>
@@ -75,7 +77,7 @@ import { Image } from 'astro:assets'
 						Gestiona Tu Psicología (Plan Lite)
 					</h2>
 
-					<p class="font-raleway text-center text-xl font-bold">$47 dólares</p>
+					<p class="font-raleway text-center text-xl font-bold">$700 pesos</p>
 					<div class="flex justify-center">
 						<button
 							id="plan1"
@@ -114,7 +116,7 @@ import { Image } from 'astro:assets'
 						Gestiona Tu Psicología (Plan Plus)
 					</h2>
 
-					<p class="font-raleway text-center text-xl font-bold">$197 dólares</p>
+					<p class="font-raleway text-center text-xl font-bold">$1800 pesos</p>
 					<div class="flex justify-center">
 						<button
 							id="plan2"
@@ -128,7 +130,7 @@ import { Image } from 'astro:assets'
 					<ul>
 						{
 							sesions.map((sesion) => (
-								<li class="my-1 flex items-center gap-2 text-base">
+								<li class="font-raleway my-1 flex items-center gap-2 text-base">
 									<span>
 										<svg
 											xmlns="http://www.w3.org/2000/svg"
