feaat: update layout redirect link

--- a/src/pages/evento/gracias.astro
+++ b/src/pages/evento/gracias.astro
@@ -5,6 +5,10 @@ import berenice from '../../assets/landing_berenice_left.png'
 ---
 
 <script>
+	setTimeout(() => {
+		window.location.href = 'https://chat.whatsapp.com/JOnZoxuheDF0xGiih6uhDj'
+	}, 2500)
+
 	document.getElementById('button')?.addEventListener('click', () => {
 		window.open('https://chat.whatsapp.com/JOnZoxuheDF0xGiih6uhDj', '_blank')
 	})
@@ -12,12 +16,8 @@ import berenice from '../../assets/landing_berenice_left.png'
 
 <Layout title="Gracias">
 	<main class="container mx-auto mt-12">
-		<section class="grid md:grid-cols-3">
+		<section>
 			<div>
-				<Image src={berenice} alt="Berenice" class="scale-x-[-1]" />
-			</div>
-
-			<div class="col-span-2">
 				<h1 class="text-center text-xl text-pink-400 md:text-4xl">
 					¡Felicidades tu registro esta casi listo!
 				</h1>
@@ -28,7 +28,7 @@ import berenice from '../../assets/landing_berenice_left.png'
 					faltan <srong>DOS PASOS</srong> muy pequeños e
 				</p>
 				<p class="text-center md:text-xl"><strong>IMPORTANTES</strong></p>
-				<ul class="mt-6 flex flex-col gap-4 md:mx-10">
+				<ul class="mt-6 flex flex-col items-center gap-4 md:mx-10">
 					<li>
 						1.- Ir a tu <strong>BANDEJA</strong> de <strong>CORREO</strong> con el cual te
 						registraste a esta SEMANA del <strong>TALLER</strong> y busca el <strong>CORREO</strong>
