--- a/src/pages/evento/index.astro
+++ b/src/pages/evento/index.astro
@@ -50,7 +50,6 @@ import berenice from '../../assets/berenice_portrait.png'
 					/>
 					<div>
 						<p class="text text-white">Reserva tu lugar</p>
-						<p class="text-sm text-white">Octubre 2023</p>
 					</div>
 				</div>
 				<div class="flex items-center gap-4">
@@ -133,7 +132,7 @@ import berenice from '../../assets/berenice_portrait.png'
 				</div>
 			</div>
 		</section>
-		<section>
+		<section class="pb-8">
 			<div class="bg-pink-400 p-8">
 				<h2 class="text-center text-2xl tracking-wider text-white md:text-4xl">
 					¿Hiciste dietas, ejercicios, cirugías bariátricas, cirugías plásticas y volviste a subir?
