Fix image paths in evento page

--- a/src/pages/evento/index.astro
+++ b/src/pages/evento/index.astro
@@ -42,7 +42,7 @@ import berenice from '../../assets/berenice_portrait.png'
 			<divc class="mx-auto grid grid-cols-2 place-items-center items-center">
 				<div class="flex items-center gap-4">
 					<img
-						src="boleto.webp"
+						src="./boleto.webp"
 						alt="boleto"
 						height="128"
 						width="128"
@@ -53,7 +53,7 @@ import berenice from '../../assets/berenice_portrait.png'
 					</div>
 				</div>
 				<div class="flex items-center gap-4">
-					<img src="anfritrion_small.webp" alt="anfritrion" class="h-16 w-16 rounded-full" />
+					<img src="./anfritrion_small.webp" alt="anfritrion" class="h-16 w-16 rounded-full" />
 					<div>
 						<p class="text-white">Psicóloga Berenice Bastidas</p>
 						<p class="text-xs text-white">Anfitrión del evento</p>
