--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,9 +20,34 @@ const { title } = Astro.props
 		<title>{title}</title>
 	</head>
 	<body>
+		<!-- Google Tag Manager (noscript) -->
+		<noscript
+			><iframe
+				src="https://www.googletagmanager.com/ns.html?id=GTM-TFL5RN5"
+				height="0"
+				width="0"
+				style="display:none;visibility:hidden"></iframe></noscript
+		>
+		<!-- End Google Tag Manager (noscript) -->
 		<slot />
 	</body>
 </html>
+
+<!-- Google Tag Manager -->
+<script is:inline>
+	;(function (w, d, s, l, i) {
+		w[l] = w[l] || []
+		w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' })
+		var f = d.getElementsByTagName(s)[0],
+			j = d.createElement(s),
+			dl = l != 'dataLayer' ? '&l=' + l : ''
+		j.async = true
+		j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl
+		f.parentNode.insertBefore(j, f)
+	})(window, document, 'script', 'dataLayer', 'GTM-TFL5RN5')
+</script>
+<!-- End Google Tag Manager -->
+
 <style is:global>
 	:root {
 		--accent: 136, 58, 234;
