--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,6 @@
 ---
+import { AstroFont } from 'astro-font'
+
 interface Props {
 	title: string
 }
@@ -9,6 +11,51 @@ const { title } = Astro.props
 <!doctype html>
 <html lang="en" class="bg-slate-50">
 	<head>
+		<AstroFont
+			config={[
+				{
+					name: 'Bebas Neue',
+					src: [
+						{
+							style: 'normal',
+							weight: '400',
+							path: './public/fonts/BebasNeue-Regular.ttf'
+						}
+					],
+					preload: true,
+					display: 'swap',
+					selector: 'h1',
+					fallback: 'sans-serif'
+				},
+				{
+					name: 'Montserrat',
+					src: [
+						{
+							style: 'normal',
+							path: './public/fonts/Montserrat-VariableFont_wght.ttf'
+						}
+					],
+					preload: true,
+					display: 'swap',
+					selector: 'body',
+					fallback: 'serif'
+				},
+				{
+					name: 'Montserrat Italic',
+					src: [
+						{
+							style: 'italic',
+							path: './public/fonts/Montserrat-Italic-VariableFont_wght.ttf'
+						}
+					],
+					preload: true,
+					display: 'swap',
+					selector: 'h3',
+					fallback: 'serif'
+				}
+			]}
+		/>
+
 		<meta charset="UTF-8" />
 		<meta name="description" content="Astro description" />
 		<meta name="viewport" content="width=device-width" />
@@ -21,20 +68,29 @@ const { title } = Astro.props
 	</head>
 	<body>
 		<!-- Google Tag Manager (noscript) -->
-		<noscript
+		<!-- <noscript
 			><iframe
 				src="https://www.googletagmanager.com/ns.html?id=GTM-TFL5RN5"
 				height="0"
 				width="0"
 				style="display:none;visibility:hidden"></iframe></noscript
-		>
+		> -->
 		<!-- End Google Tag Manager (noscript) -->
 		<slot />
-	</body>
-</html>
-
-<!-- Google Tag Manager -->
-<script is:inline>
+		<style is:global>
+			:root {
+				--accent: 136, 58, 234;
+				--accent-light: 224, 204, 250;
+				--accent-dark: 49, 10, 101;
+				--accent-gradient: linear-gradient(
+					45deg,
+					rgb(var(--accent)),
+					rgb(var(--accent-light)) 30%,
+					white 60%
+				);
+			}
+		</style>
+	</body><!-- Google Tag Manager --><!-- <script is:inline>
 	;(function (w, d, s, l, i) {
 		w[l] = w[l] || []
 		w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' })
@@ -45,19 +101,5 @@ const { title } = Astro.props
 		j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl
 		f.parentNode.insertBefore(j, f)
 	})(window, document, 'script', 'dataLayer', 'GTM-TFL5RN5')
-</script>
-<!-- End Google Tag Manager -->
-
-<style is:global>
-	:root {
-		--accent: 136, 58, 234;
-		--accent-light: 224, 204, 250;
-		--accent-dark: 49, 10, 101;
-		--accent-gradient: linear-gradient(
-			45deg,
-			rgb(var(--accent)),
-			rgb(var(--accent-light)) 30%,
-			white 60%
-		);
-	}
-</style>
+</script> --><!-- End Google Tag Manager -->
+</html>
