fix: Update Hero section and add new background image

--- a/src/components/main/Hero.astro
+++ b/src/components/main/Hero.astro
@@ -3,42 +3,62 @@ import HeroBackground from '../../assets/imagen_inicio.png'
 import { Image } from 'astro:assets'
 import LogoInicio from '../../assets/logo_inicio.png'
 import ImagenBere from '../../assets/imagen_1.png'
+import Servicios from './Servicios.astro'
 ---
 
-<section
-	id="hero-section"
-	class="mx-auto bg-cover bg-center py-1"
-	style={`background-image: url('${HeroBackground.src}'); height: ${HeroBackground.height}px; width: 100%;`}
->
-	<div class="flex justify-center py-20">
+<section id="#" class="bg-hero-image bg-cover bg-center">
+	<!-- <div
+		style={`background-image: url('${HeroBackground.src}'); height: ${HeroBackground.height}px; width: 100%;`}
+		class="bg-cover bg-center py-1"
+	> -->
+	<div class="flex justify-center">
 		<Image
 			src={LogoInicio}
 			alt="Logo"
 			height={LogoInicio.height / 1.25}
 			width={LogoInicio.width / 1.25}
+			class="py-20 md:hidden"
+		/>
+		<Image
+			src={LogoInicio}
+			alt="Logo"
+			height={LogoInicio.height}
+			width={LogoInicio.width}
+			class="hidden py-20 md:block"
 		/>
 	</div>
-	<div class="mx-4 flex justify-center bg-white px-10 pt-10 shadow-xl">
-		<div class="flex flex-col items-center justify-around gap-8 text-center">
-			<div class="text-4xl">
-				<h1>¿QUIERES MANDAR</h1>
-				<h1>
-					TODO A LA <span class="text-primary">CH!@#$%?</span>
-				</h1>
+	<div
+		class="mx-4 flex justify-center overflow-visible bg-white px-10 pt-10 shadow-xl md:relative md:mx-24 md:px-20 md:pt-0"
+	>
+		<div class="flex flex-col items-center gap-8 text-center md:flex-row md:space-x-4 md:text-left">
+			<div class="flex flex-col gap-8 md:w-1/2 md:px-16 md:py-24">
+				<div class="text-4xl tracking-wide text-gray-600 md:text-5xl">
+					<h1>¿QUIERES MANDAR</h1>
+					<h1>
+						TODO A LA <span class="text-primary">CH!@#$%?</span>
+					</h1>
+				</div>
+				<p class="leading-relaxed">
+					En eso yo te puedo ayudar, esto te va a interesar hoy tengo para ti una sesión informativa
+					de terapia psicológica que te quiero regalar, solo debes enviarme un mensaje haciendo
+					click en este botón
+				</p>
+				<div>
+					<a
+						class="mb-2 rounded-lg bg-primary px-6 py-3 text-sm font-medium text-white hover:bg-purple-400 focus:outline-none focus:ring-4 focus:ring-purple-300 md:py-3"
+					>
+						¡Quiero mi sessión!
+					</a>
+				</div>
 			</div>
-			<p>
-				En eso yo te puedo ayudar, esto te va a interesar hoy tengo para ti una sesión informativa
-				de terapia psicológica que te quiero regalar, solo debes enviarme un mensaje haciendo click
-				en este botón
-			</p>
-			<div>
-				<a
-					class="mb-2 rounded-lg bg-primary px-5 py-2.5 text-sm font-medium text-white hover:bg-purple-400 focus:outline-none focus:ring-4 focus:ring-purple-300"
-				>
-					¡Quiero mi sessión!
-				</a>
-			</div>
-			<Image src={ImagenBere} alt="Bere" height={ImagenBere.height} width={ImagenBere.width} />
+			<Image
+				src={ImagenBere}
+				alt="Bere"
+				height={ImagenBere.height}
+				width={ImagenBere.width}
+				class="md:absolute md:bottom-0 md:right-10 md:-mt-20"
+			/>
 		</div>
 	</div>
 </section>
+<!-- </div> -->
