fix: Update Hero and Layout components

--- a/src/components/main/Hero.astro
+++ b/src/components/main/Hero.astro
@@ -3,7 +3,6 @@ import HeroBackground from '../../assets/imagen_inicio.png'
 import { Image } from 'astro:assets'
 import LogoInicio from '../../assets/logo_inicio.png'
 import ImagenBere from '../../assets/imagen_1.png'
-import Servicios from './Servicios.astro'
 ---
 
 <section id="#" class="bg-hero-image bg-cover bg-center">
@@ -61,4 +60,15 @@ import Servicios from './Servicios.astro'
 		</div>
 	</div>
 </section>
+<div class="mx-8 flex flex-col items-center py-24 md:mx-auto md:w-3/4">
+	<h1 class="text-3xl uppercase text-gray-600 md:text-4xl">terapia psicológica</h1>
+	<div class="my-6 h-1 w-3/4 bg-primary md:w-1/4"></div>
+
+	<p class="text-sm md:text-base">
+		La terapia psicológica es un espacio para ti seguro y confiable donde puedes <span
+			class="text-primary"
+			>compartir tus pensamientos, emociones, sentimientos, situaciones o problemas.</span
+		>
+	</p>
+</div>
 <!-- </div> -->
