--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,7 +17,7 @@ import Servicios from '../components/main/Servicios.astro'
 <Layout title="Terapia Psicologica">
 	<main class="overflow-visible">
 		<Header />
-		<div class="mt-36">
+		<div class="mt-[117px]">
 			<Hero />
 			<Servicios />
 		</div>
