--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -9,7 +9,7 @@ const { title } = Astro.props
 ---
 
 <!doctype html>
-<html lang="en" class="bg-slate-50">
+<html lang="en">
 	<head>
 		<AstroFont
 			config={[
@@ -77,19 +77,6 @@ const { title } = Astro.props
 		> -->
 		<!-- End Google Tag Manager (noscript) -->
 		<slot />
-		<style is:global>
-			:root {
-				--accent: 136, 58, 234;
-				--accent-light: 224, 204, 250;
-				--accent-dark: 49, 10, 101;
-				--accent-gradient: linear-gradient(
-					45deg,
-					rgb(var(--accent)),
-					rgb(var(--accent-light)) 30%,
-					white 60%
-				);
-			}
-		</style>
 	</body><!-- Google Tag Manager --><!-- <script is:inline>
 	;(function (w, d, s, l, i) {
 		w[l] = w[l] || []
