--- a/src/components/main/Hero.astro
+++ b/src/components/main/Hero.astro
@@ -5,19 +5,19 @@ import LogoInicio from '../../assets/logo_inicio.png'
 import ImagenBere from '../../assets/imagen_1.png'
 ---
 
+<style>
+	.box {
+		box-shadow: 0px 14px 74.9px -25px rgba(0, 0, 0, 0.3);
+	}
+</style>
+
 <section id="#" class="bg-hero-image bg-cover bg-center">
 	<!-- <div
 		style={`background-image: url('${HeroBackground.src}'); height: ${HeroBackground.height}px; width: 100%;`}
 		class="bg-cover bg-center py-1"
 	> -->
 	<div class="flex justify-center">
-		<Image
-			src={LogoInicio}
-			alt="Logo"
-			height={LogoInicio.height / 1.25}
-			width={LogoInicio.width / 1.25}
-			class="py-20 md:hidden"
-		/>
+		<Image src={LogoInicio} alt="Logo" height={103} width={111} class="my-[56px] md:hidden" />
 		<Image
 			src={LogoInicio}
 			alt="Logo"
@@ -27,24 +27,25 @@ import ImagenBere from '../../assets/imagen_1.png'
 		/>
 	</div>
 	<div
-		class="mx-4 flex justify-center overflow-visible bg-white px-10 pt-10 shadow-xl md:relative md:mx-24 md:px-20 md:pt-0"
+		class="box mx-4 flex justify-center overflow-visible bg-white px-10 pt-10 md:relative md:mx-24 md:px-28 md:pt-0"
 	>
 		<div class="flex flex-col items-center gap-8 text-center md:flex-row md:space-x-4 md:text-left">
-			<div class="flex flex-col gap-8 md:w-1/2 md:px-16 md:py-24">
-				<div class="text-4xl tracking-wide text-gray-600 md:text-5xl">
+			<div class="flex flex-col gap-8 md:w-1/2 md:py-24">
+				<div class="text-2xl text-[#3C3C3C] md:text-5xl md:tracking-wider">
 					<h1>¿QUIERES MANDAR</h1>
 					<h1>
 						TODO A LA <span class="text-primary">CH!@#$%?</span>
 					</h1>
 				</div>
-				<p class="leading-relaxed">
+				<p class="text-sm leading-loose md:text-base">
 					En eso yo te puedo ayudar, esto te va a interesar hoy tengo para ti una sesión informativa
-					de terapia psicológica que te quiero regalar, solo debes enviarme un mensaje haciendo
-					click en este botón
+					de terapia psicológica que te quiero regalar, solo debes enviarme un mensaje haciendo clic
+					en este botón
 				</p>
 				<div>
 					<a
-						class="mb-2 rounded-lg bg-primary px-6 py-3 text-sm font-medium text-white hover:bg-purple-400 focus:outline-none focus:ring-4 focus:ring-purple-300 md:py-3"
+						href="https://api.whatsapp.com/message/LD54V7JCH3TXD1"
+						class="mb-2 rounded-lg bg-primary px-6 py-3 text-sm font-bold text-white hover:bg-purple-400 focus:outline-none focus:ring-4 focus:ring-purple-300 md:py-3 md:text-base"
 					>
 						¡Quiero mi sessión!
 					</a>
@@ -53,22 +54,28 @@ import ImagenBere from '../../assets/imagen_1.png'
 			<Image
 				src={ImagenBere}
 				alt="Bere"
-				height={ImagenBere.height}
-				width={ImagenBere.width}
+				height={623}
+				width={459}
 				class="md:absolute md:bottom-0 md:right-10 md:-mt-20"
 			/>
 		</div>
 	</div>
 </section>
-<div class="mx-8 flex flex-col items-center py-24 md:mx-auto md:w-3/4">
-	<h1 class="text-3xl uppercase text-gray-600 md:text-4xl">terapia psicológica</h1>
-	<div class="my-6 h-1 w-3/4 bg-primary md:w-1/4"></div>
-
-	<p class="text-sm md:text-base">
+<div class="mx-[45px] flex flex-col items-center py-20 md:mx-auto md:w-3/4">
+	<h1 class="text-2xl uppercase tracking-wide text-[#2a2a2a] md:text-4xl">terapia psicológica</h1>
+	<div class="pb-10 pt-6">
+		<svg xmlns="http://www.w3.org/2000/svg" width="249" height="4" viewBox="0 0 249 4" fill="none">
+			<path d="M0 2H249" stroke="#B3A7D9" stroke-width="3"></path>
+		</svg>
+	</div>
+	<p class="text-center text-[10px] tracking-tight md:text-base">
 		La terapia psicológica es un espacio para ti seguro y confiable donde puedes <span
-			class="text-primary"
+			class="font-mitalic text-xs text-primary"
 			>compartir tus pensamientos, emociones, sentimientos, situaciones o problemas.</span
-		>
+		> Con el acompañamiento terapéutico lograras asimilar y/o entender las situaciones por las que
+		estas pasando que te están robando el sueño y no te dejan vivir en paz, además iras encontrando
+		soluciones y alternativas favorables para ti, que te irán permitiendo a medida que avanzas
+		solucionar tu circunstancia.
 	</p>
 </div>
 <!-- </div> -->
