--- a/src/components/main/Hero.astro
+++ b/src/components/main/Hero.astro
@@ -68,9 +68,9 @@ import ImagenBere from '../../assets/imagen_1.png'
 			<path d="M0 2H249" stroke="#B3A7D9" stroke-width="3"></path>
 		</svg>
 	</div>
-	<p class="text-center text-[10px] tracking-tight md:text-base">
+	<p class="text-center text-sm tracking-tight md:text-base">
 		La terapia psicológica es un espacio para ti seguro y confiable donde puedes <span
-			class="font-mitalic text-xs text-primary"
+			class="font-mitalic text-sm text-primary"
 			>compartir tus pensamientos, emociones, sentimientos, situaciones o problemas.</span
 		> Con el acompañamiento terapéutico lograras asimilar y/o entender las situaciones por las que
 		estas pasando que te están robando el sueño y no te dejan vivir en paz, además iras encontrando
