--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,8 @@ import Servicios from '../components/main/Servicios.astro'
 import Sobremi from '../components/main/Sobremi.astro'
 import Testimonios from '../components/main/Testimonios.astro'
 import Preguntas from '../components/main/Preguntas.astro'
+import Ebook from '../components/main/Ebook.astro'
+import Contacto from '../components/main/Contacto.astro'
 ---
 
 <!-- <script>
@@ -26,6 +28,8 @@ import Preguntas from '../components/main/Preguntas.astro'
 			<Sobremi />
 			<Testimonios />
 			<Preguntas />
+			<Ebook />
+			<Contacto />
 		</div>
 	</main>
 </Layout>
