feat: update to desktop site

--- a/src/components/Form.astro
+++ b/src/components/Form.astro
@@ -57,7 +57,7 @@
 				name="submit"
 				value="¡QUIERO GESTIONAR MI PSICOLOGIA!"
 				id="eesubmit"
-				class="mt-8 rounded-md bg-[#CBC7DA] p-4 text-center text-sm font-bold text-white shadow"
+				class="mt-8 rounded-md bg-[#CBC7DA] p-4 text-center text-sm font-bold text-white shadow md:px-20 md:py-6 md:text-xl"
 			/>
 
 			<input type="hidden" name="publicaccountid" value="9377d1ed-c310-4467-b52c-bee4e5379dcb" />
