--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -6,7 +6,7 @@ import WhatsLogo from '../assets/Whatslogo.astro'
 const menuItems = [
 	{
 		name: 'Inicio',
-		path: '#'
+		path: '/'
 	},
 	{
 		name: 'Servicios',
