--- a/src/components/main/Hero.astro
+++ b/src/components/main/Hero.astro
@@ -12,10 +12,6 @@ import ImagenBere from '../../assets/imagen_1.png'
 </style>
 
 <section id="#" class="bg-hero-image bg-cover bg-center">
-	<!-- <div
-		style={`background-image: url('${HeroBackground.src}'); height: ${HeroBackground.height}px; width: 100%;`}
-		class="bg-cover bg-center py-1"
-	> -->
 	<div class="flex justify-center">
 		<Image src={LogoInicio} alt="Logo" height={103} width={111} class="my-[56px] md:hidden" />
 		<Image
@@ -30,7 +26,7 @@ import ImagenBere from '../../assets/imagen_1.png'
 		class="box mx-4 flex justify-center overflow-visible bg-white px-10 pt-10 md:relative md:mx-24 md:px-28 md:pt-0"
 	>
 		<div class="flex flex-col items-center gap-8 text-center md:flex-row md:space-x-4 md:text-left">
-			<div class="flex flex-col gap-8 md:w-1/2 md:py-24">
+			<div class="flex flex-col gap-8 md:w-1/2 md:gap-10 md:py-24">
 				<div class="text-2xl text-[#3C3C3C] md:text-5xl md:tracking-wider">
 					<h1>¿QUIERES MANDAR</h1>
 					<h1>
@@ -39,15 +35,15 @@ import ImagenBere from '../../assets/imagen_1.png'
 				</div>
 				<p class="text-sm leading-loose md:text-base">
 					En eso yo te puedo ayudar, esto te va a interesar hoy tengo para ti una sesión informativa
-					de terapia psicológica que te quiero regalar, solo debes enviarme un mensaje haciendo clic
-					en este botón
+					de terapia psicológica que te quiero regalar, solo debes enviarme un mensaje haciendo
+					click en este botón
 				</p>
-				<div>
+				<div class="mt-4">
 					<a
 						href="https://api.whatsapp.com/message/LD54V7JCH3TXD1"
 						class="mb-2 rounded-lg bg-primary px-6 py-3 text-sm font-bold text-white hover:bg-purple-400 focus:outline-none focus:ring-4 focus:ring-purple-300 md:py-3 md:text-base"
 					>
-						¡Quiero mi sessión!
+						¡Quiero mi sesión!
 					</a>
 				</div>
 			</div>
@@ -56,7 +52,7 @@ import ImagenBere from '../../assets/imagen_1.png'
 				alt="Bere"
 				height={623}
 				width={459}
-				class="md:absolute md:bottom-0 md:right-10 md:-mt-20"
+				class="md:absolute md:bottom-0 md:right-20 md:-mt-20"
 			/>
 		</div>
 	</div>
@@ -68,9 +64,9 @@ import ImagenBere from '../../assets/imagen_1.png'
 			<path d="M0 2H249" stroke="#B3A7D9" stroke-width="3"></path>
 		</svg>
 	</div>
-	<p class="text-center text-sm tracking-tight md:text-base">
+	<p class="max-w-4xl text-center text-sm tracking-tight md:text-base">
 		La terapia psicológica es un espacio para ti seguro y confiable donde puedes <span
-			class="font-mitalic text-sm text-primary"
+			class="font-mitalic text-lg text-primary"
 			>compartir tus pensamientos, emociones, sentimientos, situaciones o problemas.</span
 		> Con el acompañamiento terapéutico lograras asimilar y/o entender las situaciones por las que
 		estas pasando que te están robando el sueño y no te dejan vivir en paz, además iras encontrando
