--- a/src/components/main/Testimonios.astro
+++ b/src/components/main/Testimonios.astro
@@ -24,15 +24,15 @@
 </script>
 
 <section id="testimonios" class="flex flex-col items-center bg-[#F9F8F3] py-10">
-	<h1 class="mb-7 text-center text-2xl tracking-wide">TESTIMONIOS</h1>
+	<h1 class="mb-7 text-center text-2xl tracking-wide md:text-5xl">TESTIMONIOS</h1>
 	<svg xmlns="http://www.w3.org/2000/svg" width="249" height="4" viewBox="0 0 249 4" fill="none">
 		<path d="M0 2H249" stroke="#6D8C82" stroke-width="3"></path>
 	</svg>
 	<div class="px-10 py-7 leading-7">
-		<p class="text-center leading-snug text-neutral-700">
+		<p class="text-center leading-snug text-neutral-700 md:text-2xl md:leading-3">
 			Historias inspiradoras, los casos de éxito que ya tomaron acción
 		</p>
-		<h2 class="mt-7 text-center font-semibold text-primary">¿Serás el próximo?</h2>
+		<h2 class="mt-7 text-center font-semibold text-primary md:text-2xl">¿Serás el próximo?</h2>
 	</div>
 
 	<div class="blaze-slider">
