--- a/src/components/Accordion.astro
+++ b/src/components/Accordion.astro
@@ -22,7 +22,7 @@ const { title, details } = Astro.props as Props
 	// })
 </script>
 
-<div class="accordion group relative rounded-lg border border-accent">
+<div class="accordion group relative rounded-lg border border-accent md:w-[500px]">
 	<button
 		class="accordion__button flex w-full flex-1 items-center justify-between gap-2 p-3 text-left transition sm:px-4"
 		type="button"
@@ -70,25 +70,19 @@ const { title, details } = Astro.props as Props
 			if (accordionButton && accordionContent && accordionChevron) {
 				accordionButton.addEventListener('click', (event) => {
 					if (!accordionMenu.classList.contains('active')) {
-						// if accordion is currently closed, so open it
 						accordionMenu.classList.add('active')
 						accordionButton.setAttribute('aria-expanded', 'true')
 
-						// set max-height to the height of the accordion content
-						// this makes it animate properly
 						accordionContent.classList.remove('hidden')
 						accordionContent.style.maxHeight = accordionContent.scrollHeight + 'px'
 						accordionChevron.classList.add('rotate-180')
 					} else {
-						// accordion is currently open, so close it
 						accordionMenu.classList.remove('active')
 						accordionButton.setAttribute('aria-expanded', 'false')
 
-						// set max-height to the height of the accordion content
-						// this makes it animate properly
 						accordionContent.style.maxHeight = '0px'
 						accordionChevron.classList.remove('rotate-180')
-						// delay to allow close animation
+
 						setTimeout(() => {
 							accordionContent.classList.add('hidden')
 						}, 300)
@@ -100,9 +94,7 @@ const { title, details } = Astro.props as Props
 		})
 	}
 
-	// runs on initial page load
 	accordionSetup()
 
-	// runs on view transitions navigation
 	document.addEventListener('astro:after-swap', accordionSetup)
 </script>
