--- a/src/components/main/Ebook.astro
+++ b/src/components/main/Ebook.astro
@@ -8,7 +8,7 @@ import { Image } from 'astro:assets'
 	<div class="triangle-bottom h-16"></div>
 	<div class="my-10">
 		<div class="mx-10 mb-10 flex flex-col items-center text-center">
-			<h1 class="mb-7 text-center text-2xl tracking-wide">
+			<h1 class="md:z` we3text-4xl mb-7 text-center text-2xl tracking-wide">
 				OBTEN UN <span class="text-primary">MICRO E-BOOK</span>
 			</h1>
 			<svg
@@ -20,21 +20,32 @@ import { Image } from 'astro:assets'
 			>
 				<path d="M0 2H249" stroke="#B3A7D9" stroke-width="3"></path>
 			</svg>
-			<p class="my-10 text-sm">
+			<p class="my-10 text-sm md:px-40 md:text-2xl">
 				Por haber leído hasta aquí recibe de regalo el micro e-book Por que gestiona tu psicología
 				es la solución para ti.
 			</p>
 
-			<p>
+			<p class="md:px-32 md:text-xl">
 				Además, del e-book muy probable mente recibas una vez por semana un mail de mi parte sobre
 				pasar a la acción con la ayuda de la psicología. Encada uno de estos correos ofrezco mis
 				servicios de terapia, cursos y talleres.
 			</p>
+			<p class="mt-3 md:mt-8 md:px-32 md:text-xl">
+				Si te cansas de leer mis cartas podrás des suscribirte y te puedes dar de baja con dos
+				clicKs.
+			</p>
 		</div>
-		<div class="mx-8 my-20">
+		<div class="mx-8 my-20 md:mx-56">
 			<Form />
 		</div>
-		<Image src={EbookImage} alt="Ebook" width={344} height={307} class="mx-auto" />
+		<Image
+			src={EbookImage}
+			alt="Ebook"
+			width={344}
+			height={307}
+			class="mx-auto md:h-[577px] md:w-[646px]"
+			md:w-[647px]
+		/>
 	</div>
 	<div class="triangle-top h-16"></div>
 </section>
