--- a/src/components/main/Servicios.astro
+++ b/src/components/main/Servicios.astro
@@ -23,7 +23,13 @@ const serviceItems = [
 
 <section id="servicios" class="triangle-top mt-[100px] bg-zinc-100">
 	<div class="flex flex-col items-center">
-		<Image src={LogoServicio} alt="Logo" height={47} width={47} class="md:hidden" />
+		<Image
+			src={LogoServicio}
+			alt="Logo"
+			height={47}
+			width={47}
+			class="md:my-12 md:h-[69] md:w-[69]"
+		/>
 		<div class="pb-10 pt-5">
 			<h1 class="mb-7 text-center text-2xl tracking-wide">SERVICIOS</h1>
 			<svg
@@ -36,13 +42,19 @@ const serviceItems = [
 				<path d="M0 2H249" stroke="#6D8C82" stroke-width="3"></path>
 			</svg>
 		</div>
-		<div class="flex flex-grow flex-wrap justify-center gap-7 pb-20">
+		<div class="flex flex-grow flex-wrap justify-center gap-7 pb-20 md:gap-20">
 			{
 				serviceItems.map((item) => (
 					<div class="flex flex-col items-center justify-center">
-						<Image src={item.img} alt="logo" width={78} height={78} class="z-10 translate-y-10" />
-						<div class="flex h-[144px] w-[155px] items-center justify-center px-3 text-center text-sm shadow-xl">
-							<p>{item.title}</p>
+						<Image
+							src={item.img}
+							alt="logo"
+							width={78}
+							height={78}
+							class="z-10 translate-y-10 md:h-[150px] md:w-[150px]"
+						/>
+						<div class="flex h-[144px] w-[155px] items-center justify-center bg-white px-3 text-center text-sm shadow-xl md:h-[190px] md:w-[300px]">
+							<p class="md:text-xl">{item.title}</p>
 						</div>
 					</div>
 				))
