--- a/src/pages/planes.astro
+++ b/src/pages/planes.astro
@@ -34,7 +34,7 @@ import YT from '../assets/yt.png'
 		<div class="my-8 text-center text-sm leading-normal text-black">
 			Puedes hacer el pago directamente aquí en la página web
 		</div>
-		<div class="flex flex-col gap-8 pb-8">
+		<div class="flex flex-col gap-8 pb-8 md:flex-row md:gap-16">
 			<PlanCard
 				plan="(Plan Lite)"
 				price="$45 dlls"
