--- a/src/components/PlanCard.astro
+++ b/src/components/PlanCard.astro
@@ -3,20 +3,32 @@ const { plan, price, description, link } = Astro.props
 ---
 
 <div
-	class="flex max-w-[300px] flex-col items-center justify-between bg-white p-7 py-12 shadow md:w-[453px]"
+	class="flex min-w-[300px] flex-col items-center justify-between bg-white p-7 py-12 shadow md:min-w-[453px]"
 >
-	<div class="text-center">
-		<h2 class="text-xl font-medium">Gestiona Tu Psicología</h2>
-		<p class="text-xl text-accent">{plan}</p>
+	<div>
+		<div class="text-center">
+			<h2 class="text-xl font-medium">Gestiona Tu Psicología</h2>
+			<p class="text-xl text-accent">{plan}</p>
+		</div>
+		<h1 class="my-20 text-center text-2xl leading-3">{price}</h1>
+		<p class="text-primary">Incluye</p>
+		<ul>
+			{
+				description.map((item: String) => (
+					<li class="my-2 flex items-center  text-sm">
+						<svg xmlns="http://www.w3.org/2000/svg" width="67" height="67">
+							<circle cx="34" cy="34" r="3" fill="#B3A7D9" />
+						</svg>
+
+						{item}
+					</li>
+				))
+			}
+		</ul>
 	</div>
-	<h1 class="my-20 text-2xl leading-3">{price}</h1>
-	<p class="text-primary">Incluye</p>
-	<ul>
-		{description.map((item: String) => <li class="my-5 text-sm">{item}</li>)}
-	</ul>
 
 	<a
-		href="http://www.google.com"
+		href={link}
 		class="rounded-lg border-2 border-primary px-4 py-2 text-sm hover:bg-primary hover:text-white"
 	>
 		Elegir Plan</a
