fix: Update image file extensions and add selected attribute to PlanCard

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,8 +1,8 @@
 ---
 import { Image } from 'astro:assets'
 import LogoBlack from '../assets/blacklogo.svg'
-import FB from '../assets/facebook.svg'
-import IG from '../assets/instagram.svg'
+import FB from '../assets/facebook.png'
+import IG from '../assets/insta.png'
 ---
 
 <div class="my-20 flex flex-col items-center gap-8 bg-white">
