--- a/src/pages/planes/mx.astro
+++ b/src/pages/planes/mx.astro
@@ -52,6 +52,7 @@ import Footer from '../../components/Footer.astro'
 						'Una llamada de emergencia de 15 minutos.'
 					]}
 					link="https://buy.stripe.com/8wMaGRa0z7ZlcWQeV5"
+					selected
 				/>
 			</div>
 		</div>
