--- a/src/components/PlanCard.astro
+++ b/src/components/PlanCard.astro
@@ -1,5 +1,5 @@
 ---
-const { plan, price, description, link } = Astro.props
+const { plan, price, description, link, selected } = Astro.props
 ---
 
 <div
@@ -29,7 +29,10 @@ const { plan, price, description, link } = Astro.props
 
 	<a
 		href={link}
-		class="rounded-lg border-2 border-primary px-4 py-2 text-sm hover:bg-primary hover:text-white"
+		class={`rounded-lg border-2 border-primary px-4 py-2 text-sm hover:bg-primary hover:text-white` +
+			(selected
+				? ' bg-primary text-white hover:border-primary hover:text-black hover:bg-primary/30'
+				: '')}
 	>
 		Elegir Plan</a
 	>
