fix: Update image file formats and styles

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -59,7 +59,7 @@ const menuItems = [
 				>
 					<WhatsLogo />
 
-					<span class="text-sm text-white"> +52 (686) 234 - 9366</span>
+					<span class="text-sm font-semibold text-white"> +52 (686) 234 - 9366</span>
 				</a>
 			</div>
 		</div>
