--- a/src/components/main/Hero.astro
+++ b/src/components/main/Hero.astro
@@ -13,13 +13,13 @@ import ImagenBere from '../../assets/imagen_1.png'
 
 <section id="#" class="bg-hero-image bg-cover bg-center">
 	<div class="flex justify-center">
-		<Image src={LogoInicio} alt="Logo" height={103} width={111} class="my-[56px] md:hidden" />
 		<Image
 			src={LogoInicio}
 			alt="Logo"
-			height={LogoInicio.height}
-			width={LogoInicio.width}
-			class="hidden py-20 md:block"
+			height={103}
+			width={111}
+			class="my-[56px] md:h-[167px] md:w-[155px]"
+			loading="lazy"
 		/>
 	</div>
 	<div
