--- a/src/components/main/Testimonios.astro
+++ b/src/components/main/Testimonios.astro
@@ -65,13 +65,7 @@
 					</div>
 				</div>
 			</div>
-			<button class="blaze-prev">
-				<!-- <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="#594b83" class="h-6 w-6">
-					<path
-						fill-rule="evenodd"
-						d="M7.72 12.53a.75.75 0 0 1 0-1.06l7.5-7.5a.75.75 0 1 1 1.06 1.06L9.31 12l6.97 6.97a.75.75 0 1 1-1.06 1.06l-7.5-7.5Z"
-						clip-rule="evenodd"></path>
-				</svg> -->
+			<button class="blaze-prev" aria-labe="prev">
 				<svg
 					xmlns="http://www.w3.org/2000/svg"
 					width="36"
@@ -85,7 +79,7 @@
 					class="lucide lucide-chevron-left"><path d="m15 18-6-6 6-6"></path></svg
 				>
 			</button>
-			<button class="blaze-next">
+			<button class="blaze-next" aria-labe="next">
 				<svg
 					xmlns="http://www.w3.org/2000/svg"
 					width="36"
