fix: Update constants and images

--- a/src/components/main/Contacto.astro
+++ b/src/components/main/Contacto.astro
@@ -4,6 +4,7 @@ import Logo from '../../assets/blacklogo.svg'
 import FB from '../../assets/facebook.png'
 import IG from '../../assets/insta.png'
 import YT from '../../assets/yt.png'
+import { whatsappLink } from '../../utils/contants'
 ---
 
 <section id="contacto" class="pb-8">
@@ -25,7 +26,7 @@ import YT from '../../assets/yt.png'
 					</svg>
 
 					<a
-						href="https://api.whatsapp.com/message/LD54V7JCH3TXD1"
+						href={whatsappLink}
 						class="mb-4 flex w-full items-center justify-center gap-2 rounded-xl bg-primary p-4 text-center text-sm text-white md:mb-0 md:min-w-[380px] md:text-xl"
 					>
 						<svg
