--- a/src/components/main/Preguntas.astro
+++ b/src/components/main/Preguntas.astro
@@ -22,7 +22,7 @@ import fondoLarge from '../../assets/banner_lg.png'
 				<path d="M0 2H249" stroke="#6D8C82" stroke-width="3"></path>
 			</svg>
 
-			<div class="mx-10 md:mt-7">
+			<div class="mx-10 mt-7">
 				<Accordion
 					title="¿La terapia es para los locos?"
 					details="La terapia psicología se recomienda para personas que están pasando por una o varias situaciones que perciben como negativas, que ya intentaron quizás hasta resolverla ellos mismos una y otra vez sin obtener éxito, las personas que toman terapia tienen la sensatez consciente o inconsciente de acudir a un profesional para pedir ayudar."
@@ -35,7 +35,14 @@ import fondoLarge from '../../assets/banner_lg.png'
 				alt="Berenice"
 				height={323}
 				width={247}
-				class="mx-auto md:h-[574px] md:w-[438px]"
+				class="mx-auto md:hidden"
+			/>
+			<Image
+				src={ImagePreguntas}
+				alt="Berenice"
+				height={574}
+				width={438}
+				class="mx-auto hidden md:block"
 			/>
 		</div>
 	</div>
