--- a/src/pages/planes/index.astro
+++ b/src/pages/planes/index.astro
@@ -28,7 +28,7 @@ import Footer from '../../components/Footer.astro'
 	</div>
 	<div class="flex flex-col items-center bg-[#f2f2f2] py-2">
 		<div class="triangle-bottom h-16"></div>
-		<h1 class="mt-8 text-center text-2xl tracking-wide">SOBRE MI</h1>
+		<h1 class="mt-8 text-center text-2xl tracking-wide">PLANES</h1>
 		<svg xmlns="http://www.w3.org/2000/svg" width="249" height="4" viewBox="0 0 249 4" fill="none">
 			<path d="M0 2H249" stroke="#B3A7D9" stroke-width="3"></path>
 		</svg>
