--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -30,12 +30,14 @@ const menuItems = [
 		path: '#contacto'
 	}
 ]
+
+import { whatsappLink } from '../utils/contants'
 ---
 
 <nav class="fixed start-0 top-0 z-20 w-full bg-white shadow-lg">
 	<div class="mx-auto flex max-w-screen-xl flex-wrap items-center justify-between p-2 md:p-4">
 		<div class="pl-6">
-			<Image src={logotipo} alt="logotipo" width={101} height={31} class="md:h-[51] md:w-[169px]" />
+			<Image src={logotipo} alt="logotipo" widths={[101, 169]} />
 		</div>
 
 		<div
@@ -54,7 +56,7 @@ const menuItems = [
 			}
 			<div class="my-4 ml-2 md:my-0 md:ml-0">
 				<a
-					href="https://api.whatsapp.com/message/LD54V7JCH3TXD1"
+					href={whatsappLink}
 					class="flex items-center gap-2 whitespace-nowrap rounded-lg bg-whatsapp p-2 shadow-lg hover:bg-green-400"
 				>
 					<WhatsLogo />
