--- a/src/components/main/Ebook.astro
+++ b/src/components/main/Ebook.astro
@@ -38,14 +38,8 @@ import { Image } from 'astro:assets'
 		<div class="mx-8 my-20 md:mx-56">
 			<Form />
 		</div>
-		<Image
-			src={EbookImage}
-			alt="Ebook"
-			width={344}
-			height={307}
-			class="mx-auto md:h-[577px] md:w-[646px]"
-			md:w-[647px]
-		/>
+
+		<Image src={EbookImage} alt="Ebook" widths={[344, 646]} class="mx-auto" />
 	</div>
 	<div class="triangle-top h-16"></div>
 </section>
