--- a/src/components/main/Hero.astro
+++ b/src/components/main/Hero.astro
@@ -3,6 +3,7 @@ import HeroBackground from '../../assets/imagen_inicio.png'
 import { Image } from 'astro:assets'
 import LogoInicio from '../../assets/logo_inicio.png'
 import ImagenBere from '../../assets/imagen_1.png'
+import { whatsappLink } from '../../utils/contants'
 ---
 
 <style>
@@ -13,14 +14,7 @@ import ImagenBere from '../../assets/imagen_1.png'
 
 <section id="#" class="bg-hero-image bg-cover bg-center">
 	<div class="flex justify-center">
-		<Image
-			src={LogoInicio}
-			alt="Logo"
-			height={103}
-			width={111}
-			class="my-[56px] md:h-[167px] md:w-[155px]"
-			loading="lazy"
-		/>
+		<Image src={LogoInicio} alt="Logo" widths={[111, 155]} class="my-[56px]" quality={'high'} />
 	</div>
 	<div
 		class="box mx-4 flex justify-center overflow-visible bg-white px-10 pt-10 md:relative md:mx-24 md:px-28 md:pt-0"
@@ -40,7 +34,7 @@ import ImagenBere from '../../assets/imagen_1.png'
 				</p>
 				<div class="mt-4">
 					<a
-						href="https://api.whatsapp.com/message/LD54V7JCH3TXD1"
+						href={whatsappLink}
 						class="mb-2 rounded-lg bg-primary px-6 py-3 text-sm font-bold text-white hover:bg-purple-400 focus:outline-none focus:ring-4 focus:ring-purple-300 md:py-3 md:text-base"
 					>
 						¡Quiero mi sesión!
@@ -50,8 +44,7 @@ import ImagenBere from '../../assets/imagen_1.png'
 			<Image
 				src={ImagenBere}
 				alt="Bere"
-				height={623}
-				width={459}
+				widths={[215, 459]}
 				class="md:absolute md:bottom-0 md:right-20 md:-mt-20"
 			/>
 		</div>
