fix: update price

--- a/src/pages/planes/mx.astro
+++ b/src/pages/planes/mx.astro
@@ -38,20 +38,20 @@ import Footer from '../../components/Footer.astro'
 		<div class="flex flex-col gap-8 pb-8 md:flex-row md:gap-16 md:pb-48">
 			<PlanCard
 				plan="(Plan Lite)"
-				price="$700 pesos"
+				price="$800 pesos"
 				description={['Una sesión individual de terapia']}
-				link="https://buy.stripe.com/8wMeX7egP93p4qk00a"
+				link="https://buy.stripe.com/5kA16h5Kj4N90a4fZe"
 			/>
 			<div class="md:translate-y-24">
 				<PlanCard
 					plan="(Plan Plus)"
-					price="$1800 pesos"
+					price="$2000 pesos"
 					description={[
 						'3 sesiones individuales de terapia.',
 						'Acompañamiento de mensajería durante el proceso.',
 						'Una llamada de emergencia de 15 minutos.'
 					]}
-					link="https://buy.stripe.com/8wMaGRa0z7ZlcWQeV5"
+					link="https://buy.stripe.com/9AQ2alb4DbbxbSM00k"
 					selected
 				/>
 			</div>
