fix: new register page

--- a/src/components/main/Testimonios.astro
+++ b/src/components/main/Testimonios.astro
@@ -65,7 +65,7 @@
 					</div>
 				</div>
 			</div>
-			<button class="blaze-prev" aria-labe="prev">
+			<button class="blaze-prev" aria-label="prev">
 				<svg
 					xmlns="http://www.w3.org/2000/svg"
 					width="36"
